@@ -35,9 +35,8 @@ message RegisterApplicationMasterRequestProto {
 }
 
 message RegisterApplicationMasterResponseProto {
-  optional ResourceProto minimumCapability = 1;
-  optional ResourceProto maximumCapability = 2;
-  repeated ApplicationACLMapProto application_ACLs = 3;
+  optional ResourceProto maximumCapability = 1;
+  repeated ApplicationACLMapProto application_ACLs = 2;
 }
 
 message FinishApplicationMasterRequestProto {
